--- a/src/app/confirmation/confirmation.component.html
+++ b/src/app/confirmation/confirmation.component.html
@@ -1,7 +1,11 @@
-
 <div class="main">
+  <div class="sub">
+    <h1>Payment Successful!</h1>
     <div>
-        <div><h1>{{user.fullName}}</h1></div>
-       
+      <h2>Thank you, {{ user.fullName }}!</h2>
+      <h2>Your order has been is confirmed!</h2>
+      <h3>You will receive your package in 3-4 business days</h3>
+      <button routerLink="/"> Back to Home</button>
     </div>
+  </div>
 </div>
