--- a/src/app/confirmation/confirmation.component.css
+++ b/src/app/confirmation/confirmation.component.css
@@ -1,3 +1,19 @@
-.main{
-    padding-top: 10%;
+.main {
+  padding-top: 5vh;
+  height: 95vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+button {
+  padding: 1em 2em;
+  background-color: #0648af;
+  border: none;
+  border-radius: 1em;
+}
+.sub {
+  padding: 3em;
+  background-color: #c9d9f4;
+  border: 5px solid orange;
+  border-radius: 2em;
 }
