--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -70,7 +70,7 @@
     <div class="empty">
       <h1>Your Cart is Empty.</h1>
       <h1>Please Add Items!</h1>
-      <button routerLink="/">Back to Home</button>
+      <button id="home" routerLink="/">Back to Home</button>
     </div>
   </div>
 </ng-template>
