--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,11 +2,10 @@
   <div class="links1">
     <p><a routerLink="/">Home</a></p>
     <p><a routerLink="/cart">Cart</a></p>
-    <p><a routerLink="/confirmation">About Us</a></p>
-    <p><a routerLink="/">Contact</a></p>
+    <p><a routerLink="#">About Us</a></p>
+    <p><a routerLink="#">Contact</a></p>
   </div>
-
   <div class="links2">
-    <p><a routerLink="/">Logout</a></p>
+    <p><a routerLink="#">Logout</a></p>
   </div>
 </div>
