--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -56,7 +56,7 @@
         </div>
         <div class="buttons">
           <button id="home" routerLink="/">Back to Home</button>
-          <button id="submit" [disabled]="form.invalid" type="submit">
+          <button class="submit" [disabled]="form.invalid" type="submit">
             Check Out
           </button>
         </div>
