--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -22,4 +22,4 @@
   </div>
 </div>
 <br />
-<button (click)="addToCart(product)">Add to cart</button>
+<button class="add" (click)="addToCart(product)">Add to cart</button>
