--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -40,6 +40,11 @@
   color: white;
   border-radius: 0.5em;
 }
+.submit[disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
 .buttons {
   position: relative;
   left: 20em;
