--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,8 +1,11 @@
 .main {
   padding: 10% 5% 5% 5%;
-  border: 3px solid red;
+  /* height: 100vh; */
   display: flex;
   justify-content: center;
+}
+#main-container {
+  height: 100vh;
 }
 .main-can {
   background-color: aliceblue;
