--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="cart.length !== 0; else elseBlock">
+<div id="main-container" *ngIf="cart.length !== 0; else elseBlock">
   <div class="main">
     <div class="main-can">
       <div class="item-can" *ngFor="let product of cart">
