--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,7 +1,7 @@
 <div id="product-container">
   <div id="product-card">
     <a [routerLink]="['/product', product.id]">
-      .<img src="{{ product.url }}" alt="" width="200" />
+      <img src="{{ product.url }}" alt="" width="200" />
     </a>
     <span id="card-details"
       ><h3>{{ product.name }}</h3>
