--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="main">
     <ng-container *ngFor="let product of products">
-      <app-product-item class="item" [product]="product"></app-product-item>
+      <app-product-item (productEmitter)="addToCart(product)" class="item" [product]="product"></app-product-item>
     </ng-container>
   </div>
 </div>
