--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -11,6 +11,7 @@
             class="qty"
             type="number"
             name="amount"
+            (ngModelChange)="addAmount(product)"
             [(ngModel)]="product.amount"
             aria-label="amount"
           />
